removed span and fixed overflow for user name after login

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -42,8 +42,8 @@
 #header .optionalText {
   flex-basis: 7vw;
   font-size: 1.75vh;
-  flex-wrap: nowrap;
-  justify-content: center;
+  overflow: auto;
+
 }
 
 .appLogoContainer{
